htdocs/skins/fancy/view.js: Remove focus from "mark as read" button when clicked, so that user can press <space> to scroll down.
htdocs/skins/fancy/style.css, htdocs/skins/fancy/view.css: Explicitly specify serif font.

htdocs/skins/fancy/item.tpl: use <object> instead of <div> for article
contents. This tends to protect neighbors against bad markup (like
missing close-element tags).

php.ini: add hack path, for convenience.

lib/parse-feed.inc: a bunch of hooks to remove ads, web bugs, etc.

--- a/php.ini
+++ b/php.ini
@@ -1,2 +1,2 @@
 ; A php.ini file for testing and debugging.
-include_path = ".:/folks/htdocs/newsbite/lib:../lib:/folks/arensb/proj/newsbite/trunk/lib"
+include_path = ".:/folks/htdocs/newsbite/lib:../lib:/folks/arensb/proj/newsbite/trunk/lib:/folks/arensb/proj/newsbite/current/lib"
