Adding login form and cookie-based authentication, because iPhone/iPad can't seem to remember the login data.
htdocs/skins/fancy/view.js: Removed a troublesome trace statement.
htdocs/index.php: include "common.inc", to get all the necessary bits.
(added) htdocs/login.php: login form.
htdocs/.htaccess: More expanded example of what this should look like.
lib/common.inc: Check for valid cookie, or redirect to login form.
lib/config.inc: Define SERVER_SECRET, USERNAME, PASSWORD,
AUTH_COOKIE_DURATION for login stuff.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,3 +1,17 @@
+# Make sure PHP can find all of its libraries
 <IfModule mod_php5.c>
 	php_value include_path ".:./lib"
 </IfModule>
+
+# Restrict access
+AuthType Digest
+AuthName "Newsbite on moist"
+AuthDigestDomain /newsbite/
+AuthDigestProvider
+AuthUserFile /folks/htdocs/newsbite/.digest_pw
+
+#Require valid-user
+
+<Files "login.php">
+	Require valid-user
+</Files>
