--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,11 +1,6 @@
-# Make sure PHP can find all of its libraries
-<IfModule mod_php5.c>
-	php_value include_path ".:./lib"
-</IfModule>
-
 # Restrict access
 AuthType Digest
-AuthName "Newsbite on moist"
+AuthName "Newsbite"
 AuthDigestDomain /newsbite/
 AuthDigestProvider
 AuthUserFile /folks/htdocs/newsbite/.digest_pw
@@ -15,3 +10,9 @@ AuthUserFile /folks/htdocs/newsbite/.digest_pw
 <Files "login.php">
 	Require valid-user
 </Files>
+
+# Make sure PHP can find all of its libraries
+<IfModule mod_php5.c>
+	php_value include_path ".:./lib"
+</IfModule>
+
