--- a/lib/config.inc.sample
+++ b/lib/config.inc.sample
@@ -63,4 +63,9 @@ define('PASSWORD', 'thepass');
  * Set to one week by default.
  */
 define('AUTH_COOKIE_DURATION', 87600*7);
+
+/* If you want to use the htmlpurifier plugin, uncomment the next line
+ * and set it to where you installed the HTMLPurifier library.
+ */
+//define(HTMLPURIFIER_LIB, "/path/to/htmlpurifier/library");
 ?>
