--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -16,3 +16,20 @@ AuthUserFile /folks/htdocs/newsbite/.digest_pw
 
 # Safari app manifest files
 AddType text/cache-manifest .manifest
+
+# Allow static files to be gzip-compressed.
+<IfModule mime_module>
+	RemoveType .gz
+	AddEncoding x-gzip .gz
+#	AddLanguage en .en
+</IfModule>
+
+# If the Apache MIME module isn't defined, we can at least try to save
+# bandwidth by letting PHP gzip its output. (Don't turn both on at the
+# same time, or else PHP script output will be doubly-compressed.)
+<IfModule !mime_module>
+	# XXX - It'd be nice to test that this actually works, but my
+	# setup, in which files ending in .php are executed as PHP
+	# scripts, relies on mime_module.
+	php_value zlib.output_compression On
+</IfModule>
