Code to generate different app manifests for different devices.

--- a/htdocs/skins/wings/Makefile
+++ b/htdocs/skins/wings/Makefile
@@ -6,11 +6,14 @@ MAKEDEPEND =	cpp -M
 
 JS_SRC =	wings.jsh
 JS_FILES = 	$(patsubst %.jsh,%.js,${JS_SRC})
+MANIFESTS =	default.manifest \
+		iphone.manifest \
+		ipad.manifest
 
 .SUFFIXES:	.jsh .js
 .PHONY:		clean depend
 
-all:	Make.depend ${JS_FILES}
+all:	Make.depend ${JS_FILES} ${MANIFESTS}
 
 # Include dependencies: which .js files depend on what
 include Make.depend
@@ -36,3 +39,17 @@ Make.depend:	${JS_SRC}
 
 clean::
 	$(RM) Make.depend
+
+# The client only downloads new copies of cached file when the text of
+# the manifest file changes. So we need to include a nonce, a string
+# that changes every time we run 'make', in the manifest.
+MANIF_NONCE =	$(shell date)
+
+iphone.manifest:	manifest.h
+	$(CPP) $(CPP_FLAGS) -DMOBILE -DIPHONE -DNONCE="$(MANIF_NONCE)" -o $@ manifest.h
+
+ipad.manifest:		manifest.h
+	$(CPP) $(CPP_FLAGS) -DMOBILE -DIPAD -DNONCE="$(MANIF_NONCE)" -o $@ manifest.h
+
+default.manifest:	manifest.h
+	$(CPP) $(CPP_FLAGS) -DNONCE="$(MANIF_NONCE)" -o $@ manifest.h
