--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -11,7 +11,11 @@ AuthUserFile /folks/htdocs/newsbite/.digest_pw
 
 # Make sure PHP can find all of its libraries
 <IfModule mod_php5.c>
+	# Say where the lib files are to be found.
 	php_value include_path ".:./lib"
+
+	# Turn on output compression
+	php_value zlib.output_compression On
 </IfModule>
 
 # Safari app manifest files
@@ -19,17 +23,17 @@ AddType text/cache-manifest .manifest
 
 # Allow static files to be gzip-compressed.
 <IfModule mime_module>
+	# Some Apache installations define .gz to be application/x-gzip.
+	# Undo this
 	RemoveType .gz
-	AddEncoding x-gzip .gz
-#	AddLanguage en .en
-</IfModule>
 
-# If the Apache MIME module isn't defined, we can at least try to save
-# bandwidth by letting PHP gzip its output. (Don't turn both on at the
-# same time, or else PHP script output will be doubly-compressed.)
-<IfModule !mime_module>
-	# XXX - It'd be nice to test that this actually works, but my
-	# setup, in which files ending in .php are executed as PHP
-	# scripts, relies on mime_module.
-	php_value zlib.output_compression On
+	# Define the encodings "gzip" for *.gz files, and "identity"
+	# (no encoding) for .plain files.
+	# This way, for each static file foo.type (in particular, .css
+	# and .js files), we can have a foo.type.gz that will be
+	# served to clients that understand gzip, and a foo.type.plain
+	# that will be served to clients that don't (not that I've
+	# found any).
+	AddEncoding gzip .gz
+	AddEncoding identity .plain
 </IfModule>
