--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -14,6 +14,9 @@ AuthUserFile /folks/htdocs/newsbite/.digest_pw
 	# Say where the lib files are to be found.
 	php_value include_path ".:./lib"
 
+	# If update.php times out, uncomment this and adjust as needed.
+	# php_value max_execution_time	90
+
 	# Turn on output compression
 	php_value zlib.output_compression On
 </IfModule>
@@ -36,4 +39,28 @@ AddType text/cache-manifest .manifest
 	# found any).
 	AddEncoding gzip .gz
 	AddEncoding identity .plain
+</IfModule>
+
+# If the Apache MIME module isn't defined, we can at least try to save
+# bandwidth by letting PHP gzip its output. (Don't turn both on at the
+# same time, or else PHP script output will be doubly-compressed.)
+<IfModule !mime_module>
+	# XXX - It'd be nice to test that this actually works, but my
+	# setup, in which files ending in .php are executed as PHP
+	# scripts, relies on mime_module.
+	php_value zlib.output_compression On
+</IfModule>
+
+# Force *.js files to have MIME type text/javascript, even if Apache
+# mime.types wants application/javascript
+AddType text/javascript .js
+
+# Turn on caching, if mod_expires is loaded
+<IfModule expires_module>
+	ExpiresActive On
+	ExpiresByType text/css "access plus 1 week"
+	ExpiresByType image/jpeg "access plus 1 week"
+	ExpiresByType image/png "access plus 1 week"
+	ExpiresByType image/gif "access plus 1 week"
+	ExpiresByType text/javascript "access plus 1 day"
 </IfModule>
