--- a/htdocs/skins/fancy/htaccess.sample.in
+++ b/htdocs/skins/fancy/htaccess.sample.in
@@ -3,7 +3,7 @@ AuthType Digest
 AuthName "Newsbite"
 AuthDigestDomain /newsbite/
 AuthDigestProvider
-AuthUserFile /folks/htdocs/newsbite/.digest_pw
+AuthUserFile @INSTALL_ROOT@/.digest_pw
 
 <Files "login.php">
 	Require valid-user
@@ -12,7 +12,8 @@ AuthUserFile /folks/htdocs/newsbite/.digest_pw
 # Make sure PHP can find all of its libraries
 <IfModule mod_php5.c>
 	# Say where the lib files are to be found.
-	php_value include_path ".:./lib"
+	# XXX - Is "." necessary?
+	php_value include_path ".:@INSTALL_LIB@"
 
 	# If update.php times out, uncomment this and adjust as needed.
 	# php_value max_execution_time	90
@@ -41,8 +42,9 @@ AddType text/cache-manifest .manifest
 	# served to clients that understand gzip, and a foo.type.plain
 	# that will be served to clients that don't (not that I've
 	# found any).
-	AddEncoding gzip .gz
-	AddEncoding identity .plain
+	AddEncoding x-gzip .gz
+
+#	AddLanguage en .en
 </IfModule>
 
 # If the Apache MIME module isn't defined, we can at least try to save
@@ -66,5 +68,5 @@ AddType text/javascript .js
 	ExpiresByType image/jpeg "access plus 1 week"
 	ExpiresByType image/png "access plus 1 week"
 	ExpiresByType image/gif "access plus 1 week"
-	ExpiresByType text/javascript "access plus 1 day"
+#	ExpiresByType text/javascript "access plus 1 day"
 </IfModule>
