--- a/php.ini
+++ b/php.ini
@@ -1,2 +1,2 @@
 ; A php.ini file for testing and debugging.
-include_path = ".:/folks/htdocs/newsbite/lib:../lib:/folks/arensb/proj/newsbite/lib:/folks/arensb/proj/newsbite/current/lib"
+include_path = ".:./lib:/folks/htdocs/newsbite/lib:../lib:/folks/arensb/proj/newsbite/lib:/folks/arensb/proj/newsbite/current/lib"
