Set AuthDigestProvider, as required in Apache 2.4.

--- a/htdocs/htaccess.sample.in
+++ b/htdocs/htaccess.sample.in
@@ -2,7 +2,7 @@
 AuthType Digest
 AuthName "Newsbite"
 AuthDigestDomain /newsbite/
-AuthDigestProvider
+AuthDigestProvider file
 AuthUserFile @INSTALL_ROOT@/.digest_pw
 
 <Files "login.php">
