More explicit PHP tag, as recommended to avoid confusion with XML.

--- a/lib/config.inc.sample
+++ b/lib/config.inc.sample
@@ -1,4 +1,4 @@
-<?
+<?php
 /* Database access settings */
 $DB_HOST = "localhost";		// Host on which database resides
 $DB_NAME = "newsbite";		// Database name
