INSTALL_HTDOCS directory says where to put HTML and related files.

--- a/Makefile.common
+++ b/Makefile.common
@@ -21,6 +21,7 @@ endif
 # pieces.
 INSTALL_ROOT ?=		/usr/local/newsbite
 INSTALL_BACKEND ?=	${INSTALL_ROOT}
+INSTALL_HTDOCS ?=	${INSTALL_ROOT}
 INSTALL_SKIN ?=		${INSTALL_ROOT}/skins
 INSTALL_LIB ?=		${INSTALL_ROOT}/lib
 INSTALL_PLUGINS ?=	${INSTALL_ROOT}/plugins
