JavaScript include files now go in "js-src/" at the top level.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ htdocs/newsbite.manifest
 # Localisms on downspout
 Makefile.local.dist
 install-private/
+**/Make.depend
+# XXX - This could be "htdocs/js/*.js", if not for jquery-$version.min.js.
+# Perhaps move that elsewhere.
+htdocs/js/feeds.js
