Add a common "depend::" target, that defaults to nothing, for directories with Make.depend.

--- a/htdocs/js/Makefile
+++ b/htdocs/js/Makefile
@@ -36,7 +36,7 @@ distclean::	clean
 
 # Make.depend
 # Generate a list of which .js files depend on which source files.
-depend:	Make.depend
+depend::	Make.depend
 Make.depend:	${JS_SRC}
 	$(RM) $@
 	for i in $(JS_SRC); do \
