--- a/htdocs/skins/fancy/Makefile
+++ b/htdocs/skins/fancy/Makefile
@@ -20,7 +20,7 @@ IMAGE_FILES =	$(wildcard *.gif *.png *.jpg *.svg)
 # Credits:
 # http://commons.wikimedia.org/wiki/File:Checkbox.svg
 # http://commons.wikimedia.org/wiki/File:Checkbox-red.svg
-OTHER_FILES =	htaccess.sample
+OTHER_FILES =	# htaccess.sample
 
 include ../../../Makefile.common
 
