Move REST files to lib/rest/.

--- a/Makefile.common
+++ b/Makefile.common
@@ -23,6 +23,7 @@ INSTALL_ROOT ?=		/usr/local/newsbite
 INSTALL_BACKEND ?=	${INSTALL_ROOT}
 INSTALL_HTDOCS ?=	${INSTALL_ROOT}
 INSTALL_LIB ?=		${INSTALL_ROOT}/lib
+INSTALL_LIB_REST ?=	${INSTALL_LIB}/rest
 INSTALL_PLUGINS ?=	${INSTALL_ROOT}/plugins
 INSTALL_HTMLPURIFY ?=	${INSTALL_ROOT}/HTMLpurify
 
