--- a/htdocs/htaccess.sample.in
+++ b/htdocs/htaccess.sample.in
@@ -92,5 +92,8 @@ AddType text/javascript .js
 	# w1/article/mark, and so on. At which point, it might be
 	# desirable to add more rules to look for specific cases and
 	# hand things off to specialized handlers.
+
+	# For w1/login, redirect to the non-RESTful login script.
+	RewriteRule ^w1/login		login.php	[L,QSA]
 	RewriteRule ^w1/(.*)		rest.php/$1	[L]
 </IfModule>
