--- a/Makefile.common
+++ b/Makefile.common
@@ -31,13 +31,13 @@ INSTALL_HTMLPURIFY ?=	${INSTALL_ROOT}/HTMLpurify
 # than directories.
 
 # If your DocumentRoot is /www/htdocs, and you install Newsbite in
-# /www/htdocs/newsbite/, then usually index.php will be visible at the
-# URL http://www.your.site/newsbite/index.php
+# /www/htdocs/newsbite/, then usually index.html will be visible at the
+# URL http://www.your.site/newsbite/index.html
 # and the default value below reflects this.
 #
 # If you're doing something funky with your httpd config such that
-# /www/htdocs/a/b/c/index.php shows up as
-# http://www.your.site/d/e/f/index.php, then set
+# /www/htdocs/a/b/c/index.html shows up as
+# http://www.your.site/d/e/f/index.html, then set
 #	INSTALL_ROOT =	/www/htdocs/a/b/c
 #	HT_PREFIX =	/d/e/f
 HT_PREFIX ?=		/$(notdir $(patsubst %/,%,${INSTALL_HTDOCS}))
